# MC60-Programmer

./: CMakeLists.txt  README.md  SampleLog.txt  SampleLog2.txt  SampleLog3.txt  c_mylog.txt  main.c
Flasher/: CMakeLists.txt  Serial.c  Serial.h  flasher.c  flasher.h
